alignment issues improved

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,20 +45,18 @@ div.subHeader{
 @media screen and (max-width: 396px) {
 	div.subHeader{margin:15px 5% 2% 5%;}
 	div.menu {
-		position:		relative;
-		top:			0;
+		position:		relative;		
 		width:			100%;
 	}
 
 	div.menu nav ul li {
 		padding: 20px;
 		display:		block;	
-		text-align:		center;
+		text-align:		center;	
+		border-bottom: 	1px solid #777;
 	}
+	
 }
-
-
-
 
 div.evolucoes {
 	background-color:	#ddd;
@@ -71,6 +69,12 @@ div.evolucoes input, div.evolucoes select, div.evolucoes button {
 	padding:		1.5px 10px;
 	margin-left:		5px;
 	margin-top:		7px;
+}
+
+div.textoEvolucoes {
+	border: 		1px solid gray;
+	background-color:	#ddd;
+	margin:			1.5% 5%;
 }
 
 div.textoEvolucoes textarea {
@@ -88,17 +92,17 @@ div.textoEvolucoes textarea:nth-child(2) {
 
 button.btSelect {
 	width:			40.5%;
-	margin:			1% 13% 2% 5%;
-	padding:			7px 10px;	
-}
-
-button.btSave, button.btClear {
-	width:			10%;
-	margin:			1% 0.5% 1% 0.5%;
+	margin:			2% 8% 2% 5%;
 	padding:			7px 7px;	
 }
 
-@media screen and (max-width: 550px){
+button.btSave, button.btClear {
+	width:			18%;
+	margin:			2% 0.25% 2% 0.25%;
+	padding:		7px 7px;	
+}
+
+@media screen and (max-width: 611px){
 	div.textoEvolucoes textarea {
 		width: 			84%;
 		padding:		10px;
@@ -149,17 +153,22 @@ button.btSave, button.btClear {
 #tabela th, #tabela td {
 	text-align:			center;
 	padding:			10px;
-	border:			1px solid #ddd;	
+	border:			1px solid #aaa;	
 	
 }
 
 
 
-#tabela tr:nth-child(odd) {
+#tabela tr:nth-child(even) {
 	background-color:		#f1f1f1;
 }
 
+#tabela tr:nth-child(odd) {
+	background-color:		#d5d5d5;
+}
+
+
 #tabela tr:hover {
-	background-color:		#dcdcdc;
+	background-color:		#b5b5b5;
 }
 
